// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should re-rendering only part of consumers if nested. 1`] = `
Array [
  <div>
    modified task1
    1
  </div>,
  <div>
    option name
    0
  </div>,
]
`;

exports[`Should re-rendering only part of consumers if nested. 2`] = `
Array [
  <div>
    modified task1
    1
  </div>,
  <div>
    modified option name
    1
  </div>,
]
`;

exports[`Should re-rendering only part of consumers. 1`] = `
Array [
  <div>
    modified task1
    1
  </div>,
  <div>
    option name
    0
  </div>,
]
`;

exports[`Should re-rendering only part of consumers. 2`] = `
Array [
  <div>
    modified task1
    1
  </div>,
  <div>
    modified option name
    1
  </div>,
]
`;
